--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,10 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="hero-image">
-<img src="static/HERO.PNG">
+    <img src="static/HERO.PNG">
     <div class="hero-text">
-    <h1>Oligonucleotide Finder</h1>
-    <p>Lee Lab University of Pittsburgh</p>
-</div>
+        <h1 style="outline-style: solid; font-size: 86px;">Oligonucleotide Finder</h1>
+        <p style="outline-style: solid; font-size: 62px;">Lee Lab University of Pittsburgh</p>
+    </div>
+    <div style="background-color: #051f2c;">
 
-{% endblock content %}
+    </div>
+
+    {% endblock content %}
