--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -3,8 +3,8 @@
 <div class="hero-image">
     <img src="static/HERO.PNG">
     <div class="hero-text">
-        <h1 style="outline-style: solid; font-size: 86px;">Oligonucleotide Finder</h1>
-        <p style="outline-style: solid; font-size: 62px;">Lee Lab University of Pittsburgh</p>
+        <h1 style="color: white; font-size: 86px;">Oligonucleotide Finder</h1>
+        <p style="font-size: 48px;">Lee Lab University of Pittsburgh</p>
     </div>
     <div style="background-color: #051f2c;">
 
