--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -39,7 +39,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/HERO.PNG");
+  :before {
+    background-image: linear-gradient(
+      rgba(5, 31, 44, 0.0) 0%,
+      rgba(5, 31, 44, 0.0) 70%,
+      // These three 'smooth' out the fade.
+      rgba(5, 31, 44, 0.2) 80%,
+      rgba(5, 31, 44, 0.7) 90%,
+      rgba(5, 31, 44, 0.9) 95%,
+      // Solid to match the background.
+      rgba(5, 31, 44, 1.0) 100%
+    );
+  }
   height: 20%;
   background-position: center;
   background-repeat: no-repeat;
