--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -6,8 +6,23 @@
         <h1 style="color: white; font-size: 86px;">Oligonucleotide Finder</h1>
         <p style="font-size: 48px;">Lee Lab University of Pittsburgh</p>
     </div>
-    <div style="background-color: #051f2c;">
-        <br>
+    <div style="background-color: #051f2c; margin-top: -100px;">
+        <div class = "row container-fluid">
+            <div class = "col-md-6">
+                <p style="font-size: 48px;">Submit Your Sequence Here</p>
+            </div>
+            <div class = "col-md-6">
+                <p style="font-size: 48px;">Check Out The Source Code</p>
+            </div>
+        </div>
+        <div class = "row container-fluid">
+            <div class = "col-md-6">
+                <p style="font-size: 48px;">About the Project And The Lab</p>
+            </div>
+            <div class = "col-md-6">
+                <p style="font-size: 48px;">Cite Our Work</p>
+            </div>
+        </div>
     </div>
 
     {% endblock content %}
