--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -39,6 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-image {
+    /* Fix this shit */
     background-image: linear-gradient(
       rgba(5, 31, 44, 0.0) 0%,
       rgba(5, 31, 44, 0.0) 70%,
