--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -9,18 +9,22 @@
     <div style="background-color: #051f2c; margin-top: -100px;">
         <div class = "row container-fluid">
             <div class = "col-md-6">
-                <p style="font-size: 48px;">Submit Your Sequence Here</p>
+                <p style="font-size: 48px; color: white;">Submit Your Sequence Here</p>
+                <a href="submit.html" class="myButton">Submit</a>
             </div>
             <div class = "col-md-6">
-                <p style="font-size: 48px;">Check Out The Source Code</p>
+                <p style="font-size: 48px; color: white;">Check Out The Source Code</p>
+                <a href="https://www.github.com/amv69/BIOSC1640" class="myButton">Github</a>
             </div>
         </div>
         <div class = "row container-fluid">
             <div class = "col-md-6">
-                <p style="font-size: 48px;">About the Project And The Lab</p>
+                <p style="font-size: 48px; color: white;">About the Project And The Lab</p>
+                <a href="about.html" class="myButton">About</a>
             </div>
             <div class = "col-md-6">
-                <p style="font-size: 48px;">Cite Our Work</p>
+                <p style="font-size: 48px; color: white;">Cite Our Work</p>
+                <a href="cite.html" class="myButton">Submit</a>
             </div>
         </div>
     </div>
