--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -7,24 +7,24 @@
         <p style="font-size: 48px;">Lee Lab University of Pittsburgh</p>
     </div>
     <div style="background-color: #051f2c; margin-top: -100px;">
-        <div class = "row container-fluid">
-            <div class = "col-md-6">
+        <div class = "row container-fluid" style="align-content: center;">
+            <div class = "col-md-6" style="align-content: center;">
                 <p style="font-size: 48px; color: white;">Submit Your Sequence Here</p>
-                <a href="submit.html" class="myButton">Submit</a>
+                <a href="submit.html" class="myButton">Submit</a><br>
             </div>
-            <div class = "col-md-6">
+            <div class = "col-md-6" style="align-content: center;">
                 <p style="font-size: 48px; color: white;">Check Out The Source Code</p>
-                <a href="https://www.github.com/amv69/BIOSC1640" class="myButton">Github</a>
+                <a href="https://www.github.com/amv69/BIOSC1640" class="myButton">Github</a> <br>
             </div>
         </div>
-        <div class = "row container-fluid">
-            <div class = "col-md-6">
+        <div class = "row container-fluid" style="align-content: center;">
+            <div class = "col-md-6" style="align-content: center;">
                 <p style="font-size: 48px; color: white;">About the Project And The Lab</p>
-                <a href="about.html" class="myButton">About</a>
+                <a href="about.html" class="myButton">About</a><br>
             </div>
-            <div class = "col-md-6">
+            <div class = "col-md-6" style="align-content: center;">
                 <p style="font-size: 48px; color: white;">Cite Our Work</p>
-                <a href="cite.html" class="myButton">Submit</a>
+                <a href="cite.html" class="myButton">Cite</a> <br>
             </div>
         </div>
     </div>
