--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -31,6 +31,9 @@
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="https://mtleelab.pitt.edu/">About</a>
+                    </div>
+                    <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/cite">Cite</a>
                     </div>
                     <div class="navbar-nav">
