--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -11,7 +11,7 @@
             <div class="col-md-6 text-center" style="align-content: center;">
                 <p style="font-size: 48px; color: white;">Submit Your Sequence</p>
                
-                    <a href="submit.html" class="myButton">Submit</a><br>
+                    <a href="/submit" class="myButton">Submit</a><br>
  
             </div>
             <div class="col-md-6 text-center" style="align-content: center;">
@@ -26,9 +26,9 @@
             </div>
             <div class="col-md-6 text-center" style="align-content: center;">
                 <p style="font-size: 48px; color: white;">Cite Our Work</p>
-                <a href="cite.html" class="myButton">Cite</a> <br>
+                <a href="/cite" class="myButton">Cite</a> <br>
             </div>
-        </div>
+        </div><br>
     </div>
 
     {% endblock content %}
