--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -59,12 +59,12 @@
                     <small class="text-muted">
                         Should not be smaller than X
                     </small><br>
-                    <!--
+                    
                     {{ form.mask.label(class_="form-control-label") }}
                     {{ form.mask(class="form-control") }}
                     <small class="text-muted">
                         Only choose if selecting to use option
-                    </small><br> !-->
+                    </small><br> 
                 </div>
 
             </div>
