--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -63,7 +63,7 @@
                     {{ form.mask.label(class_="form-control-label") }}
                     {{ form.mask(class="form-control") }}
                     <small class="text-muted">
-                        Only choose if selecting to use option
+                        Leave None if not using
                     </small><br> 
                 </div>
 
