--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -6,11 +6,8 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group col-md-12 mb-4">
-                <form action="getfile" method="POST" enctype="multipart/form-data">
-
-                    Project file path: <input type="file" name="myfile"><br>
-                    <input type="submit" value="Submit">
-                </form>
+                    {{ form.fastA.label(class_="form-control-label") }}
+                    {{ form.fastA(class="form-control-file", rows="4") }}
             </div>
             <div class="row container-fluid">
                 <div class="form-group col mb-6">
@@ -78,8 +75,6 @@
     </form>
     <p>Output:</p>
 
-    <textarea class="form-control-file" rows="4" id="inputTextToSave">{{ output }} &#10;&#13;{{ output2 }}</textarea>
-    <p>Name of File: <input id="inputFileNameToSaveAs">
-        <button onclick="saveTextAsFile()">Save Output to File</button>
+    <textarea class="form-control-file" rows="4">{{ output }} &#10;&#13;{{ output2 }}</textarea>
 </div>
 {% endblock content %}
