--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -46,41 +46,35 @@
         {% block content %} {% endblock %}
     </div>
     </body>
+    <script>
 
-<script>
-    function saveTextAsFile() {
-        var textToWrite = document.getElementById("inputTextToSave").value;
-        var textFileAsBlob = new Blob([textToWrite], {
-            type: 'text/plain'
-        });
-        var fileNameToSaveAs = document.getElementById("inputFileNameToSaveAs").value;
-        var downloadLink = document.createElement("a");
-        downloadLink.download = fileNameToSaveAs;
-        downloadLink.innerHTML = "Download File";
-        if (window.webkitURL != null) {
-            // Chrome allows the link to be clicked
-            // without actually adding it to the DOM.
-            downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
-        } else {
-            // Firefox requires the link to be added to the DOM
-            // before it can be clicked.
-            downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
-            downloadLink.onclick = destroyClickedElement;
-            downloadLink.style.display = "none";
-            document.body.appendChild(downloadLink);
-        }
-        downloadLink.click();
+(function () {
+var textFile = null,
+  makeTextFile = function (text) {
+    var data = new Blob([text], {type: 'text/plain'});
+
+    // If we are replacing a previously generated file we need to
+    // manually revoke the object URL to avoid memory leaks.
+    if (textFile !== null) {
+      window.URL.revokeObjectURL(textFile);
     }
-    function destroyClickedElement(event) {
-        document.body.removeChild(event.target);
-    }
-    function loadFileAsText() {
-        var fileToLoad = document.getElementById("fileToLoad").files[0];
-        var fileReader = new FileReader();
-        fileReader.onload = function(fileLoadedEvent) {
-            var textFromFileLoaded = fileLoadedEvent.target.result;
-            document.getElementById("inputTextToSave").value = textFromFileLoaded;
-        };
+
+    textFile = window.URL.createObjectURL(data);
+
+    return textFile;
+  };
+
+
+  var create = document.getElementById('create'),
+    textbox = document.getElementById('textbox');
+
+  create.addEventListener('click', function () {
+    var link = document.getElementById('downloadlink');
+    link.href = makeTextFile(textbox.value);
+    link.style.display = 'block';
+  }, false);
+})();
+
 </script>
 
 </html>
